feat: premium homepage redesign, brand color sync, and intro doc enhancements